kubernetes/real-app/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: devops-lab

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend

          image: frontend:v1

          imagePullPolicy: Never

          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 15
